--- a/index.css
+++ b/index.css
@@ -31,3 +31,19 @@ body {
 .summary {
   flex-grow: 2;
 }
+
+.error {
+  color: red;
+  font-weight: 600;
+  text-align: center;
+}
+
+.inProcess {
+  display: none;
+}
+
+.inProcess[showInProcess="true"] {
+  display: block;
+  color: blue;
+  font-weight: 600;
+}
